create unit form and category form

--- a/warehouse/templates/warehouse/home.html
+++ b/warehouse/templates/warehouse/home.html
@@ -2,4 +2,9 @@
 
 {% block body %}
 <h2>Home</h2>
+{% if message %}
+<div class="alert alert-success" role="alert">
+  {{message}}
+</div>
+{% endif %}
 {% endblock body %}
