--- a/warehouse/templates/warehouse/layout.html
+++ b/warehouse/templates/warehouse/layout.html
@@ -30,6 +30,21 @@
     <link rel="stylesheet" href=" {% static '/warehouse/css/warehouse.css' %} " />
   </head>
   <div class="page-header">
+    {% if user.is_authenticated %}
+    
+    <a href="{% url 'product_new' %}" class="top-menu" style="color: black">
+</svg><button type="button" class="btn btn-outline-info">Add New
+Product +</button></a>
+
+ <a href="{% url 'new_category' %}" class="top-menu" style="color: black">
+</svg><button type="button" class="btn btn-outline-info">Add New
+Category</button></a>
+
+ <a href="{% url 'new_unit' %}" class="top-menu" style="color: black">
+</svg><button type="button" class="btn btn-outline-info">Add New
+Unit</button></a>
+
+    {% endif %}
     
   
 
