--- a/warehouse/templates/warehouse/navbar.html
+++ b/warehouse/templates/warehouse/navbar.html
@@ -21,7 +21,7 @@
           <a class="nav-link" href="{% url 'home' %}">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="{% url 'products' %}">Products</a>
         </li>
         <li class="nav-item">
           <a
