creta ItemForm and added to orders view"

--- a/warehouse/templates/warehouse/layout.html
+++ b/warehouse/templates/warehouse/layout.html
@@ -19,6 +19,12 @@ Category</button></a>
 </svg><button type="button" class="btn btn-outline-info">Add New
 Unit</button></a>
 
+ <a href="{% url 'new_order' %}" class="top-menu" style="color: black">
+</svg><button type="button" class="btn btn-outline-info">New Order</button></a>
+
+ <a href="{% url 'item_order' %}" class="top-menu" style="color: black">
+</svg><button type="button" class="btn btn-outline-info">Add item to order</button></a>
+
     {% endif %}
     <h2><a href="/">Inventory Managment</a></h2>
   </div>
