--- a/warehouse/templates/warehouse/script.html
+++ b/warehouse/templates/warehouse/script.html
@@ -1,9 +1,12 @@
 {% block script %}
 <script>
-  $('#data').DataTable({
-                      responsive: true,
-                      autoWidth: false,
-                  });
+  $("#data").DataTable({
+    responsive: true,
+    autoWidth: false,
+  });
+  $("#datax").DataTable({
+    responsive: true,
+    autoWidth: false,
+  });
 </script>
 {% endblock script %}
-
