--- a/warehouse/templates/warehouse/order.html
+++ b/warehouse/templates/warehouse/order.html
@@ -26,11 +26,20 @@
   {% endfor %}
 </ul>
 <br>
-<h2>Add Product from List</h2>
-<br>
+<div>
+ <h2>Item to order</h2>
+  <form  method="POST" class="post-form">
+      {% csrf_token %}
+      {{form.as_p}}
 
-<form action="{% url 'add' order.id %}" method="POST">
-{% csrf_token %}
+      {{form.item_quantity}}
+<button type="submit" class="btn btn-light save">Save</button>
+  </form>
+</div>
+<br>
+<br>
+<h2>Add Items to order</h2>
+
 <table id="data" class="table table-striped " style="width:100%">
         <thead class="thead-dark ">
             <tr>
@@ -38,6 +47,61 @@
                 <th>Name</th>
                 <th>Categorie</th>
                 <th>Stock</th>
+                <th>Description</th>
+                <th>Quantiy</th>
+                <th></th>
+                
+            </tr>
+        </thead>
+        <tbody>
+         
+          {% for product in all_products %}
+           <form action="{% url 'add_item' order.id %}" method="POST">
+            {% csrf_token %}
+            <tr>
+                <input type="number" hidden name="product_id" id="" value="{{product.id}}">
+                <td>{{product.product_name}}</td>
+                <td>{{product.category}}</td>
+                <td>{{product.quantity}}</td>
+                <td>{{product.description}}</td>
+                <td>{{form.item_quantity}}</td>
+                <td></td>
+                <td><input type="submit" class="btn btn-success" value="Add"></td>
+            </tr>
+            </form>
+          {% endfor %}
+          
+        </tbody>
+        <tfoot>
+            <tr>
+              
+                
+                <th>Name</th>
+                <th>Categorie</th>
+                <th>Stock</th>
+                <th>Description</th>
+                <th>Quantiy</th>
+                <th></th>
+                
+            </tr>
+        </tfoot>
+    </table>
+
+
+<br>
+<h2>Add Product from List</h2>
+<br>
+
+<form action="{% url 'add' order.id %}" method="POST">
+{% csrf_token %}
+<table id="datax" class="table table-striped " style="width:100%">
+        <thead class="thead-dark ">
+            <tr>
+                
+                <th>Name</th>
+                <th>Categorie</th>
+                <th>Stock</th>
+            
                 <th>Description</th>
                 <th></th>
                 
@@ -61,6 +125,7 @@
                 <th>Name</th>
                 <th>Categorie</th>
                 <th>Stock</th>
+                <th>Quantiy</th>
                 <th>Description</th>
                 <th></th>
                 
