--- a/warehouse/templates/warehouse/layout.html
+++ b/warehouse/templates/warehouse/layout.html
@@ -25,6 +25,9 @@ Unit</button></a>
  <a href="{% url 'item_order' %}" class="top-menu" style="color: black">
 </svg><button type="button" class="btn btn-outline-info">Add item to order</button></a>
 
+ <a href="{% url 'stock' %}" class="top-menu" style="color: black">
+</svg><button type="button" class="btn btn-outline-info">Add Stock to Warehouse</button></a>
+
     {% endif %}
     <h2><a href="/">Inventory Managment</a></h2>
   </div>
