--- a/warehouse/static/warehouse/css/warehouse.css
+++ b/warehouse/static/warehouse/css/warehouse.css
@@ -12,9 +12,11 @@ h2 a {
 
 
 .page-header {
-    background-color: whitesmoke;
+    background-color: #F7F6F3;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
+    color: #918F8C;
+    
 }
 
 .content {
@@ -97,4 +99,8 @@ h6 {
 
 .login-card {
     padding: 50px;
+}
+
+.url-link{
+    color: #918F8C;
 }
