--- a/warehouse/templates/warehouse/layout.html
+++ b/warehouse/templates/warehouse/layout.html
@@ -5,6 +5,7 @@
     {% include 'warehouse/links.html' %}
   </head>
   <div class="page-header">
+    <h2 ><a class="nav-link top-menu" style="color: #918F8C;" href="{% url 'dashboard_admin' %}">Inventory Managment</a></h2>
     {% if user.is_authenticated %}
     <a href="{% url 'logout' %}"><button type="button" class="btn btn-danger">Logout</button></a>
     <a href="{% url 'product_new' %}" class="top-menu" style="color: black">
@@ -15,7 +16,7 @@ Product +</button></a>
 
  <a href="{% url 'new_category' %}" class="top-menu" style="color: black">
 </svg><button type="button" class="btn btn-outline-info">Add New
-Category</button></a>
+Categorie</button></a>
 
  <a href="{% url 'new_unit' %}" class="top-menu" style="color: black">
 </svg><button type="button" class="btn btn-outline-info">Add New
@@ -39,10 +40,10 @@ Unit</button></a>
 
 
     {% endif %}
-    <h2><a href="/">Inventory Managment</a></h2>
+    
   </div>
   {% include 'warehouse/navbar.html' %}
-  
+  <br>
    <div class="container">
       {% block body %}
       {% endblock body %}
