--- a/warehouse/templates/warehouse/links.html
+++ b/warehouse/templates/warehouse/links.html
@@ -13,6 +13,7 @@
     
 
     <!-- jQuery and JS bundle w/ Popper.js -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js" crossorigin="anonymous"></script>
     
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
@@ -31,7 +32,10 @@
     <script src="{% static '/warehouse/assets/datatables-1.10.20/plugins/responsive-2.2.3/js/dataTables.responsive.min.js' %}"></script>
     <script src="{% static '/warehouse/assets/datatables-1.10.20/plugins/responsive-2.2.3/js/responsive.bootstrap4.min.js' %}"></script>
     
-
+<link rel="stylesheet" href=" {% static '/warehouse/css/sb-admin.css' %} " />
+        <script src="{% static '/warehouse/js/scripts.js' %}"></script>
+        <link href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css" rel="stylesheet" crossorigin="anonymous" />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/js/all.min.js" crossorigin="anonymous"></script>
 <link
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
@@ -50,4 +54,5 @@
 
 
 <link rel="stylesheet" href=" {% static '/warehouse/css/warehouse.css' %} " />
+<link rel="stylesheet" href=" {% static '/warehouse/css/sb-admin.css' %} " />
 {% endblock links %}
