--- a/warehouse/templates/warehouse/products_list.html
+++ b/warehouse/templates/warehouse/products_list.html
@@ -15,7 +15,7 @@
           <h4 class="card-title">
             <a href=""> {{product.product_name}} </a>
           </h4>
-          <h6 class="card-subtitle mb-2 ">Category: {{product.category}}</h6>
+          <h6 class="card-subtitle mb-2 ">Category: {{product.categorie}}</h6>
           <h6 class="card-subtitle mb-2 ">Quantity: {{product.quantity}} {{product.unit}}</h6>
           <br>
           <h6 class="card-subtitle mb-2 text-muted">{{product.description}}</h6>
