--- a/warehouse/templates/warehouse/order.html
+++ b/warehouse/templates/warehouse/order.html
@@ -4,7 +4,22 @@
 <ul>
   <li>Warehouse: {{order.warehouse}}</li>
   <li>Date Created: {{order.date_created}}</li>
+  <li>Number of items in this order: {{item_number}}</li>
 </ul>
+{% if item_number > 0 %}
+  <a href="{% url 'deliver' order.id %}"><button type="button" class="btn
+btn-success">Deliver</button></a>
+{% else %}
+  <p>Recuerda que para entregar un pedido, este al menos tiene que tener un elemento </p>
+{% endif %}
+
+{% if item_number > 0 %}
+<p>Recuerda que para eliminar esta orden primero no tiene que tener ningun elemento</p>
+{% else %}
+<a href="{% url 'reject' order.id %}"><button type="button" class="btn
+btn-danger">Reject</button></a>
+{% endif %}
+
 <br>
 <h2>Current Items in this order</h2>
 
@@ -21,70 +36,75 @@
     {% for item in items %}
     <form action="{% url 'remove_item' order.id %}" method="POST">
       {% csrf_token %}
-    <tr>
-      <input type="number" name="item_id" hidden id="" value="{{item.id}}">
-      <input type="number" name="item_quantity" hidden id="" value="{{item.item_quantity}}">
-      <input type="number" name="product_id" hidden id="" value="{{item.product.id}}">
-      <th scope="row">{{item.id}}</th>
-      <td>{{item.product.product_name}}</td>
-      <td>{{item.item_quantity}}</td>
-      <td>{{item.product.unit}}</td>
-      <td><input type="submit" class="btn btn-danger" value="Remove"></td>
-    </tr>
+      <tr>
+        <input type="number" name="item_id" hidden id="" value="{{item.id}}">
+        <input type="number" name="item_quantity" hidden id="" value="{{item.item_quantity}}">
+        <input type="number" name="product_id" hidden id="" value="{{item.product.id}}">
+        <th scope="row">{{item.id}}</th>
+        <td>{{item.product.product_name}}</td>
+        <td>{{item.item_quantity}}</td>
+        <td>{{item.product.unit}}</td>
+        <td><input type="submit" class="btn btn-danger" value="Remove"></td>
+      </tr>
     </form>
     {% empty %}
-  <li>No Items.</li>
-     {% endfor %}
+    <li>No Items.</li>
+    {% endfor %}
   </tbody>
 </table>
 <br>
 <div>
-<br>
-<h2>Add more Items to order</h2>
-<br>
-<table id="data" class="table table-striped " style="width:100%">
-        <thead class="thead-dark ">
-            <tr>               
-                <th>Warehouse</th>
-                <th>Product</th>
-                <th>Stock</th>
-                <th>Quantiy</th>
-                <th></th>                
-            </tr>
-        </thead>
-        <tbody>
-          {% for item in stock %}
-           <form action="{% url 'add_item' order.id %}" method="POST">
-            {% csrf_token %}
-            <tr>
-                <input type="text" hidden name="product_pk" id="" value="{{item.product_id.id}}" >
-                <td>{{item.warehouse_id.warehouse}}</td>
-                <td>{{item.product_id}}</td>
-                <td>{{item.stock}}</td>
-                <td>{{form.item_quantity}}</td>
-                <td></td>
-                <td><input type="submit" class="btn btn-success" value="Add"></td>
-            </tr>
-            </form>
-          {% endfor %}         
-        </tbody>
-        <tfoot>
-            <tr>
-                <th>Warehouse</th>
-                <th>Product</th>
-                <th>Stock</th>
-                <th>Quantiy</th>
-                <th></th> 
-            </tr>
-        </tfoot>
-    </table>
-<br>
-<br>
-<br>
-<a href="{% url 'home' %}"><button type="button" class="btn btn-info">Back to Home</button></a>
-<br>
-<br>
-<br>
-<br>
-<br>
-{% endblock %}
+  <br>
+  <h2>Add more Items to order</h2>
+  <br>
+  <table id="data" class="table table-striped " style="width:100%">
+    <thead class="thead-dark ">
+      <tr>
+        
+        <th>Warehouse</th>
+        <th>Product</th>
+        <th>Stock</th>
+        <th>Quantiy</th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for item in stock %}
+      <form action="{% url 'add_item' order.id %}" method="POST">
+        {% csrf_token %}
+        <tr>
+          <input type="text" hidden name="product_pk" id="" value="{{item.product_id.id}}">
+          <td>{{item.warehouse_id.warehouse}}</td>
+          <td>{{item.product_id}}</td>
+          <td>{{item.stock}}</td>
+          <td>{{form.item_quantity}}</td>
+          <td><input type="submit" class="btn btn-success" value="Add"></td>
+        </tr>
+      </form>
+      {% endfor %}
+    </tbody>
+    <tfoot>
+      <tr>
+        
+        <th>Warehouse</th>
+        <th>Product</th>
+        <th>Stock</th>
+        <th>Quantiy</th>
+      </tr>
+    </tfoot>
+  </table>
+  <br>
+  <br>
+  <br>
+  <a href="{% url 'home' %}"><button type="button" class="btn btn-info">Back to Home</button></a>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <script>
+    $(document).ready(function() {
+    $('#data').DataTable();
+    } );
+  </script>
+  {% endblock %}
