--- a/warehouse/templates/warehouse/new_order.html
+++ b/warehouse/templates/warehouse/new_order.html
@@ -10,6 +10,6 @@
       {% csrf_token %}
       <label for="order_name">Name of the new order</label>
       {{form.order_name}}
-<button type="submit" class="btn btn-light save">Save</button>
+<button type="submit" class="btn btn-primary save"><i class="far fa-save"></i> Save</button>
   </form>
 {% endblock body %}
