--- a/warehouse/templates/warehouse/add_stock.html
+++ b/warehouse/templates/warehouse/add_stock.html
@@ -6,6 +6,6 @@
   <form  method="POST" class="post-form" action="{% url 'add_stock' %}">
       {% csrf_token %}
       {{form.as_p}}
-<button type="submit" class="btn btn-light save">Save</button>
+<button type="submit" class="btn btn-primary save"><i class="far fa-save"></i> Save</button>
   </form>
 {% endblock body %}
