--- a/warehouse/templates/warehouse/category_edit.html
+++ b/warehouse/templates/warehouse/category_edit.html
@@ -1,11 +1,9 @@
 {% extends "warehouse/layout.html" %}
-
-
 {% block body %}
   <h2>New Category</h2>
   <form  method="POST" class="post-form">
       {% csrf_token %}
       {{form_category.as_p}}
-<button type="submit" class="btn btn-light save">Save</button>
+<button type="submit" class="btn btn-primary save"><i class="far fa-save"></i> Save</button>
   </form>
 {% endblock body %}
