--- a/warehouse/templates/warehouse/unit_edit.html
+++ b/warehouse/templates/warehouse/unit_edit.html
@@ -6,6 +6,6 @@
   <form  method="POST" class="post-form">
       {% csrf_token %}
       {{form_unit.as_p}}
-<button type="submit" class="btn btn-light save">Save</button>
+<button type="submit" class="btn btn-primary save"><i class="far fa-save"></i> Save</button>
   </form>
 {% endblock body %}
