create dashboard for user and fix add item bug

--- a/warehouse/templates/warehouse/admin_dashboard.html
+++ b/warehouse/templates/warehouse/admin_dashboard.html
@@ -31,7 +31,8 @@
                         <div class="sb-sidenav-menu-heading" style="color: #918f8c">
                             Products
                         </div>
-                        <a class="url-nav nav-link" style="color: #918f8c" href="index.html">
+                        <a class="url-nav nav-link" style="color: #918f8c"
+                        href="{% url 'dashboard_admin' %}">
                             <div class="sb-nav-link-icon">
                                 <i style="color: #918f8c" class="fas fa-tachometer-alt"></i>
                             </div>
