--- a/warehouse/templates/warehouse/navbar.html
+++ b/warehouse/templates/warehouse/navbar.html
@@ -18,7 +18,7 @@
     <div class="collapse navbar-collapse my-2 my-lg-0" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="{% url 'home' %}">Home</a>
+          <a class="nav-link" href="{% url 'dashboard_admin' %}">Dashboard</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="{% url 'products' %}">Products</a>
