--- a/warehouse/templates/warehouse/orders_list.html
+++ b/warehouse/templates/warehouse/orders_list.html
@@ -1,4 +1,4 @@
-{% extends "warehouse/layout.html" %} {% block body %}
+{% extends "warehouse/layout_customer.html" %} {% block body %}
 <h1>Orders</h1>
 <div class="row">
   <div class="col-12">
