--- a/warehouse/templates/warehouse/add_stock.html
+++ b/warehouse/templates/warehouse/add_stock.html
@@ -2,6 +2,13 @@
 
 
 {% block body %}
+{% if message %}
+
+<div class="alert alert-success" role="alert">
+  {{message}}
+</div>
+  
+{% endif %}
   <h2>Add Stock to Warehouse</h2>
   <form  method="POST" class="post-form" action="{% url 'add_stock' %}">
       {% csrf_token %}
