--- a/warehouse/templates/warehouse/layout.html
+++ b/warehouse/templates/warehouse/layout.html
@@ -25,8 +25,6 @@ Unit</button></a>
  <a href="{% url 'new_order' %}" class="top-menu" style="color: black">
 </svg><button type="button" class="btn btn-outline-info">New Order</button></a>
 
- <a href="{% url 'item_order' %}" class="top-menu" style="color: black">
-</svg><button type="button" class="btn btn-outline-info">Add item to order</button></a>
 
  <a href="{% url 'stock' %}" class="top-menu" style="color: black">
 </svg><button type="button" class="btn btn-outline-info">Add Stock to Warehouse</button></a>
@@ -42,7 +40,7 @@ Unit</button></a>
     {% endif %}
     
   </div>
-  {% include 'warehouse/navbar.html' %}
+  {% include 'warehouse/navbar_customer.html' %}
   <br>
    <div class="container">
       {% block body %}
