add more columns to data frame

--- a/warehouse/templates/warehouse/admin_dashboard.html
+++ b/warehouse/templates/warehouse/admin_dashboard.html
@@ -168,6 +168,9 @@
                             </table>
                         </div>
                     </div>
+                    <div class="row">
+                        {{data | safe}}
+                    </div>
                 </div>
             </main>
             <footer class="py-4 bg-light mt-auto">
