--- a/warehouse/templates/warehouse/login.html
+++ b/warehouse/templates/warehouse/login.html
@@ -65,6 +65,7 @@
   {% block body %}
   
 <div class="login-card card">
+  <img src="{% static '/warehouse/img/bayer.png' %}" alt=""  class="center">
   <h2>Login</h2>
   {% if logout_message %}
 <div class="alert alert-info" role="alert">
